# serde-clash

./: Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
assets/: config.yaml  demo.yaml
src/: lib.rs  main.rs
